tests/ui/error-codes/e0119/complex-impl.stderr
error[E0119]: conflicting implementations of trait `External` for type `(Q, M<'_, '_, '_, Box<_>, _, _>)`
  --> $DIR/complex-impl.rs:9:1
   |
LL | impl<R> External for (Q, R) {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: conflicting implementation in crate `complex_impl_support`:
           - impl<'a, 'b, 'c, T, U, V, W> External for (T, M<'a, 'b, 'c, Box<U>, V, W>)
             where <U as FnOnce<(T,)>>::Output == V, <V as Iterator>::Item == T, 'b: 'a, T: 'a, U: FnOnce(T), U: 'static, V: Iterator, V: Clone, W: Add, <W as Add>::Output: Copy;

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0119`.
